--- a/Tabs/index.html
+++ b/Tabs/index.html
@@ -4,18 +4,18 @@
         <link rel="stylesheet" type="text/css" href="/Tabs/sass/main.css" media="screen">
     </head>
     <body>
-        <nav class="row">
+        <nav class="[ row ]">
             <a href="#">
-                <img src="/Tabs/Images/Anarchist_flag.svg" alt="Company Logo">
+                <img class="[ logo ]" src="/Tabs/Images/Anarchist_flag.svg" alt="Company Logo">
             </a>
-            <div class="row">
-                <a class="tab" href="#"><button>Tab One</button></a>
-                <a class="tab" href="#"><button>Tab Two</button></a>
-                <a class="tab" href="#"><button>Tab Three</button></a>
-                <a class="tab" href="#"><button>Tab Four</button></a>
-                <a class="tab" href="#"><button>Tab Five</button></a>
-                <a class="tab" href="#"><button>Tab Six</button></a>
-                <a class="tab" href="#"><button>Tab Seven</button></a>                
+            <div class="[ row fe tabRow ]">
+                <a href="#"><button class="[ tab ]">Tab One</button></a>
+                <a href="#"><button class="[ tab ]" data-state="active">Tab Two</button></a>
+                <a href="#"><button class="[ tab ]">Tab Three</button></a>
+                <a href="#"><button class="[ tab ]">Tab Four</button></a>
+                <a href="#"><button class="[ tab ]">Tab Five</button></a>
+                <a href="#"><button class="[ tab ]">Tab Six</button></a>
+                <a href="#"><button class="[ tab ]">Tab Seven</button></a>                
             </div>
         </nav>
         <main>
